Cyberduck
FTP, SFTP, WebDAV, Cloud Files, Google Docs, Windows Azure & Amazon S3 Browser for Mac OS X.
http://cyberduck.ch/

Changelog. Last modified: $Date$

4.0 [http://trac.cyberduck.ch/milestone/4.0]
- [Feature] Version for Microsoft Windows XP, Windows Vista & Windows 7.
- [Feature] Connecting to Windows Azure Blob Storage (Azure) (#3938)

3.6.2 [http://trac.cyberduck.ch/milestone/3.6.2]
- [Bugfix] Files pasted upload to parent directory (#5155)
- [Feature] Option to display hidden files in upload prompt (#1243)
- [Feature] Import Transmit favorites (#3073)
- [Feature] Copy and open multiple URLs (#5135)
- [Feature] Support for PuTTY private key format (SFTP)
- [Bugfix] Uploading .xlsx or .docx documents fails with permission error (#5169) (Google Docs)
- [Bugfix] Reading and writing ACLs (Google Docs)
- [Bugfix] Interoperability with cPanel Web Disk (WebDAV) (#5188)
- [Bugfix] Downloading previous versions of file (S3) (#5217)

3.6.1 (Sep-07-2010) [http://trac.cyberduck.ch/milestone/3.6.1]
- [Bugfix] Permissions reset (FTP) (#5132)
- [Bugfix] Failure reading symbolic link target for directories (SFTP) (#5141)

3.6 (Sep-06-2010) [http://trac.cyberduck.ch/milestone/3.6]
- [Feature] Connecting to Google Storage (Google Storage)
- [Feature] Edit Access Control List (ACL) (#3191) (S3, Google Storage, Google Docs)
- [Feature] Enable Bucket Versioning (#4511) (S3)
- [Feature] Enable Bucket Multi-Factor Authentication Delete (#4510) (S3)
- [Feature] Display previous file versions in browser (S3)
- [Feature] Download previous file version (S3)
- [Feature] Revert to previous file version (S3)
- [Feature] Default root file (index.html) configuration for distribution (CloudFront)
- [Feature] Eucalyptus Walrus support enabled by default (S3)
- [Feature] Duplicate Bookmark (#3385)
- [Feature] Import bookmarks from thirdparty applications (Filezilla, Fetch, Interarchy, Flow) (#3373)
- [Feature] Copy directory listing to clipboard (#2372)