@@ -44,14 +44,16 @@
             "http://trac.cyberduck.ch/milestone/3.6.2">Version 3.6.2</a></strong><br/>
 
     <ul>
-        <li>[Bugfix] Files pasted upload to parent directory (<a href="http://trac.cyberduck.ch/ticket/5155">#5155</a>)
-        </li>
         <li>[Feature] Option to display hidden files in upload prompt (<a href="http://trac.cyberduck.ch/ticket/1243">#1243</a>)
         </li>
         <li>[Feature] Import Transmit favorites (<a href="http://trac.cyberduck.ch/ticket/3073">#3073</a>)</li>
-        <li>[Feature] Copy and open multiple URLs (<a href="http://trac.cyberduck.ch/ticket/5135">#5135</a>)
+        <li>[Feature] Copy and open multiple URLs(<a href="http://trac.cyberduck.ch/ticket/5135">#5135</a>)
         </li>
         <li>[Feature] Support for PuTTY private key format (SFTP)</li>
+        <li>[Feature] Duplicate Bookmarks using drag and drop with option key</li>
+        <li>[Feature] Display only affected files in synchronization preview (#5226)</li>
+        <li>[Bugfix] Files pasted upload to parent directory (<a href="http://trac.cyberduck.ch/ticket/5155">#5155</a>)
+        </li>
         <li>[Bugfix] Uploading .xlsx or .docx documents fails with permission error (<a
                 href="http://trac.cyberduck.ch/ticket/5169">#5169</a>) (Google Docs)
         </li>
@@ -59,6 +61,10 @@
         <li>[Bugfix] Interoperability with cPanel Web Disk (WebDAV) (<a href="http://trac.cyberduck.ch/ticket/5188">#5188</a>)
         </li>
         <li>Downloading previous versions of file (S3) (<a href="http://trac.cyberduck.ch/ticket/5217">#5217</a>)</li>
+        <li>[Bugfix] Skip directories with matching timestamp from synchronization (<a
+                href="http://trac.cyberduck.ch/ticket/557">#557</a>)
+        <li>[Bugfix] Not using proper storage URL (<a href="http://trac.cyberduck.ch/ticket/5216">#5216</a>) (Swift
+            OpenStack)
     </ul>
 
     <strong><a href=
